--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.27.2",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "pg": "^8.8.0",
     "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/pg": "^8.6.5",
     "@types/swagger-ui-express": "^4.1.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
